Mon May 11 21:05:50 EDT 1998  Jonathan Blandford  <jrb@mit.edu>
	* default.xpm:  Was less brain-dead and changed the highlighted dragon
	to face the correct way as well... (:
	
Mon May 11 04:08:04 EDT 1998  Jonathan Blandford  <jrb@mit.edu>
	* default.xpm:  Changed green dragon to face the correct direction.
	
1998-04-24  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* mahjongg.c (create_mahjongg_board): Make the drawing area use
	the correct visual.
	(refresh): Fixed off-by-one error.
	(main): Made it use GdkColorContext correctly (remember to
	initialize the pixel and used arrays!).  Also, color values are in
	[0, 65535].
	Fixed compiler warnings.
	(tile_gone): Fixed off-by-one.
	(draw_selected_tile): Fixed off-by-one.
	(redraw_area): Made it use gdk_rectangle_intersect for correct behavior.
	(redraw_tile_in_area): Made it use gdk_rectangle_intersect for
	simpler code and correct behavior.

Sat Mar 21 15:36:39 1998  Tom Tromey  <tromey@cygnus.com>

	* mahjongg.c: Use gnome_message_box_*, not gnome_messagebox_*.

Sun Mar  8 20:44:15 1998  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am (mahjongg_LDADD): Don't include libsupport.a.

	* Makefile.am (INCLUDES): Added GNOME_INCLUDEDIR.

Sat Mar  7 22:49:06 1998  Tom Tromey  <tromey@cygnus.com>

	* mahjongg.c (main): Use new gnome_init.

1998-02-19  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* mahjongg.c (main): Added app_id "mahjongg".

Mon Feb 16 22:32:02 1998  Tom Tromey  <tromey@cygnus.com>

	* mahjongg/mahjongg.c (MAH_VERSION): Renamed from VERSION to avoid
	clash.
	Include <config.h>.
