@@ -1,5 +1,5 @@
  TODO:
 
 
- * Properties Dialog
- * Generate Solvable games
+ * Add capability to change background color in Properties Dialog
+ * Generate Solvable games 
